--- a/modified_e2e_coref/experiments.conf
+++ b/modified_e2e_coref/experiments.conf
@@ -32,7 +32,7 @@ best {
   filter_widths = [3, 4, 5]
   filter_size = 50
   char_embedding_size = 8
-  char_vocab_path = "../e2e_coref/char_vocab.english.txt"
+  char_vocab_path = "char_vocab.english.txt"
   context_embeddings = ${glove_300d_filtered}
   head_embeddings = ${glove_300d_2w}
   contextualization_size = 200
@@ -67,7 +67,7 @@ best {
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
   eval_frequency = 5000
   report_frequency = 100
-  log_root = "../e2e_coref/logs"
+  log_root = "logs"
   cluster = ${two_local_gpus}
 }
 
