--- a/modified_e2e_coref/experiments.conf
+++ b/modified_e2e_coref/experiments.conf
@@ -11,6 +11,10 @@ glove_300d_2w {
   path = glove_50_300_2.txt
   size = 300
 }
+glove_300d_2w_filtered {
+  path = glove_50_300_2.txt.filtered
+  size = 300
+}
 
 # Distributed training configurations.
 two_local_gpus {
@@ -73,8 +77,8 @@ best {
 
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
 final = ${best} {
-  context_embeddings = ${glove_300d}
-  head_embeddings = ${glove_300d_2w}
+  context_embeddings = ${glove_300d_filtered}
+  head_embeddings = ${glove_300d_2w_filtered}
   lm_path = ""
   eval_path = test.english.jsonlines
   conll_eval_path = test.english.v4_gold_conll
